# backend

./: .env.example  .gitignore  README.md  pyproject.toml  railway.json  requirements.txt
alembic/: env.py
alembic/versions/: 5f665d7137f5_initial_schema.py
app/: config.py  converters.py  main.py  schemas.py
app/chain/: abi_loader.py  client.py  executor_wallet.py
app/chain/abis/: AgentNFT.json  AgentToken.json  AgentVault.json  DividendDistributor.json  FounderVault.json  HelmRegistry.json  MantleMETHAdapter.json  MockERC20.json  OndoUSDYAdapter.json  PlatformTreasury.json  PythPriceAdapter.json  RedemptionQueue.json  SyntheticAsset.json  TimeProvider.json  YieldHarvester.json
app/db/: __init__.py  base.py  models.py  session.py
app/hermes/: client.py
app/indexer/: dispatcher.py  listener.py  state.py
app/indexer/handlers/: agent_token.py  distributor.py  founder.py  nft.py  redemption.py  registry.py  vault.py
app/mandate/: hash.py  ipfs.py  parser.py  rules.py
app/narrator/: generator.py
app/repos/: agents.py  analytics.py  benchmark.py  mandates.py  portfolio.py
app/services/: bybit_client.py  coingecko_client.py  condition_evaluator.py  decision_engine.py  distribute.py  dividend_indexing.py  harvest.py  nft_metadata.py  qualification.py  rebalance.py
app/utils/: addresses.py  cache.py
scripts/: audit.sh  chain_smoke_test.py  debug_rebalance_revert.py  debug_register_revert.py  demo_walkthrough.md  e2e_demo.py  entrypoint.sh  extract_abis.py  generate_notes.py  reset_demo.sh  seed.py
static/: test.html
